assets/css/app.css
/* ... */
@media (min-width: 1280px){
  .xl\:w-1\/4{
    width: 25%;
  }
  .xl\:grid-cols-2{
    grid-template-columns: repeat(2, minmax(0, 1fr));
  }
  .xl\:grid-cols-3{
    grid-template-columns: repeat(3, minmax(0, 1fr));
  }
  .xl\:grid-cols-4{
    grid-template-columns: repeat(4, minmax(0, 1fr));
  }
  .xl\:grid-cols-5{
    grid-template-columns: repeat(5, minmax(0, 1fr));
  }
}

@media (min-width: 1536px){
  .\32xl\:col-span-2{
    grid-column: span 2 / span 2;
  }
  .\32xl\:col-span-3{
    grid-column: span 3 / span 3;
  }
  .\32xl\:col-span-4{
    grid-column: span 4 / span 4;
  }
  .\32xl\:block{
    display: block;
  }
  .\32xl\:w-1\/4{
    width: 25%;
  }
  .\32xl\:grid-cols-2{
    grid-template-columns: repeat(2, minmax(0, 1fr));
  }
  .\32xl\:grid-cols-4{
    grid-template-columns: repeat(4, minmax(0, 1fr));
  }
}

